# gremlin.c

./: .gitignore  CMakeLists.txt  README.md
descriptors/: .gitignore  CMakeLists.txt  README.md
descriptors/include/gremlind/: arena.h  axioms.h  build.h  extend.h  lib.h  name.h  nodes.h  resolve.h  std.h
descriptors/src/: arena.c  arena_std.c  build.c  extend.c  lib.c  name.c  resolve.c
descriptors/tests/: all_tests.c  arena_test.c  build_test.c  integration_test.c  name_test.c  resolve_test.c  tests.h
example/: CMakeLists.txt  README.md  example.proto  main.c
gremlinc/: CMakeLists.txt  README.md
gremlinc-gen/: CMakeLists.txt  README.md
gremlinc-gen/cmake/: GremlincGenerate.cmake
gremlinc-gen/src/: args.c  args.h  emit_file.c  emit_file.h  io.c  io.h  main.c  sources.c  sources.h
gremlinc/include/gremlinc/: const_convert.h  emit.h  lib.h  naming.h  writer.h
gremlinc/src/: const_convert.c  emit_bytes.c  emit_common.c  emit_common.h  emit_enum.c  emit_enum_ref.c  emit_map.c  emit_message.c  emit_msg_ref.c  emit_repeated_bytes.c  emit_repeated_msg.c  emit_repeated_scalar.c  emit_scalar.c  lib.c  naming.c  writer.c
gremlinc/tests/: all_tests.c  const_convert_test.c  enum_test.c  naming_test.c
integration-test/: CMakeLists.txt  benchmark.c  main.c  test_framework.h
parser/: .gitignore  CMakeLists.txt  Makefile  README.md
parser/include/gremlinp/: axioms.h  buffer.h  entries.h  errors.h  lemmas.h  lexems.h  lib.h  std.h
parser/src/: lib.c
parser/src/entries/: buffer.c  edition.c  enum.c  errors.c  extend.c  extensions.c  field.c  field_type.c  group.c  import.c  lexems.c  message.c  oneof.c  option.c  options.c  package.c  proto_file.c  reserved.c  service.c  std.c  syntax.c
parser/tests/: all_tests.c  integration_test.c  lexems_test.c  tests.h
runtime/: .gitignore  CMakeLists.txt  README.md
runtime/bench/: bench.c
runtime/include/: gremlin.h
runtime/tests/: float_test.c  verify.c
